# adam

./: .gitignore  AGENTS.md  AUTHORS  CHANGELOG.md  CITATION.cff  COLLABORATION.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MISSION.md  README.md  RESEARCH.md  RESEARCH_AGGLUTINATIVE_NEURAL.md  codemeta.json
crates/adam-agg-model/: Cargo.toml
crates/adam-agg-model/benches/: neural_inference.rs  verifier_latency.rs
crates/adam-agg-model/src/: checkpoint.rs  generate.rs  lib.rs  train.rs  verifier.rs
crates/adam-agg-model/tests/: l55_l6_e2e.rs  verifier_integration.rs
crates/adam-agg-synth/: Cargo.toml
crates/adam-agg-synth/src/: error.rs  lib.rs
crates/adam-agg-tokenizer/: Cargo.toml
crates/adam-agg-tokenizer/src/: error.rs  lib.rs  vocab.rs
crates/adam-agg-tokenizer/tests/: round_trip_100_words.rs  round_trip_property.proptest-regressions  round_trip_property.rs
crates/adam-corpus/: Cargo.toml
crates/adam-corpus/src/: lib.rs
crates/adam-corpus/tests/: manifest_contracts.rs  source_registry_contracts.rs
crates/adam-curriculum/: Cargo.toml
crates/adam-curriculum/src/: concept.rs  diagnostic.rs  error.rs  learner.rs  lib.rs  load.rs  outcome.rs  planner.rs
crates/adam-curriculum/tests/: load_seed.rs  teach_one_concept.rs
crates/adam-dialog/: Cargo.toml
crates/adam-dialog/benches/: turn_latency.rs
crates/adam-dialog/src/: action.rs  answer_ir.rs  belief.rs  cargo_verify.rs  conversation.rs  curriculum.rs  dialog_context.rs  discourse.rs  domain_index.rs  entities.rs  intent.rs  kazakh_fuzzy.rs  language_core.rs  lib.rs  neural_preview.rs  pedagogical.rs  phoneme.rs  planner.rs  proof_object.rs  quality.rs  question_shape.rs  realiser.rs  selection.rs  semantics.rs  sentence_decomp.rs  slot_inventory.rs  slot_syntax.rs  system_clock.rs  system_identity.rs  task.rs  templates.rs  tool.rs  topic_extraction.rs  transliteration.rs  tts.rs  uncertainty.rs  verifier.rs  weather.rs
crates/adam-dialog/src/nlg/: mod.rs  rules.rs
crates/adam-dialog/tests/: adversarial_dialog_v1.rs  anaphora_recall_v5175.rs  answer_ir_e2e_v590.rs  ask_fix_corrected_code_v5125.rs  ask_fix_previous_error_v5100.rs  codex_priority_c_v5_16_10.rs  codex_round2_v4960.rs  codex_round2_v4965_anaphora.rs  codex_round3_v5025.rs  codex_round3_v5030.rs  codex_round3_v5035.rs  cognitive_eval.rs  curriculum_v4980.rs  curriculum_v4985_auto_advance.rs  curriculum_v4990_query_intents.rs  curriculum_v4995_adaptive_difficulty.rs  d1_closure_v5177.rs  end_to_end.rs  factual_eval_100.rs  live_holdout.rs  live_holdout_2026_05_02.rs  live_holdout_codex_2026_05_07.rs  live_holdout_v5100_codex.rs  live_holdout_v5105_codex.rs  live_holdout_v5110_codex.rs  live_holdout_v5115_codex.rs  live_holdout_v5120_codex.rs  live_holdout_v5400_bridges.rs  live_holdout_v5450_audit.rs  live_holdout_v5460_detector.rs  live_holdout_v5470_deferred.rs  live_holdout_v5480_bundle.rs  live_holdout_v5500_kernel.rs  live_holdout_v5650_codex.rs  live_holdout_v5660_codex2.rs  live_holdout_v5950_codex.rs  longest_isa_chain_v5130.rs  proof_gate_v585.rs  proof_object_e2e.rs  recall_batch_v5176.rs  (+33 more)
crates/adam-eval/: Cargo.toml
crates/adam-eval/src/: lib.rs
crates/adam-eval/tests/: benchmark_contracts.rs  eval_dataset_contracts.rs  graph_first_contracts.rs  rust_only_contracts.rs
crates/adam-kernel/: Cargo.toml
crates/adam-kernel-fst/: Cargo.toml
crates/adam-kernel-fst/src/: lexicon.rs  lib.rs  morphotactics.rs  parser.rs  phonology.rs  pronoun_paradigm.rs  root_affinity.rs  sem_frame.rs  suffix_priors.rs
crates/adam-kernel-fst/tests/: roundtrip.rs
crates/adam-kernel/src/: lib.rs
crates/adam-reasoning/: Cargo.toml
crates/adam-reasoning/src/: graph.rs  harness.rs  lib.rs  ontology.rs  patterns.rs  reasoner.rs  world_core.rs
crates/adam-retrieval/: Cargo.toml
crates/adam-retrieval/src/: compose.rs  lib.rs
crates/adam-scaling/: Cargo.toml
crates/adam-scaling/src/: bench.rs  lib.rs
crates/adam-tokenizer/: Cargo.toml
crates/adam-tokenizer/src/: bpe.rs  lib.rs
crates/adam-tokenizer/tests/: tokenizer_experiment_contracts.rs
crates/adam-train/: Cargo.toml
crates/adam-train/src/: data.rs  lib.rs  model.rs
crates/adam-train/tests/: baseline_training_contracts.rs
crates/adam-voice/: Cargo.toml
crates/adam-voice/src/: aec.rs  error.rs  lib.rs  mic.rs  normalizer.rs  playback.rs  stt.rs
data/: INVENTORY.md  README.md  STRUCTURE.md  corpus_audit_report.json  corpus_morpheme_coverage_report.json
docs/: MANIFESTO.md  architecture_neural_v6.md  architecture_v2.md  architecture_v3.md  corpus_audit.md  corpus_policy.md  corpus_sources.md  curation_workflow.md  educational_program_2026-W19+1.md  eval_baseline.md  evaluation_policy.md  factual_eval_hallucination_classification.md  foundation_scope.md  intelligence_roadmap.md  language_core_hybrid_roadmap.md  lexicon_gap_candidates.md  migration_v5_to_v6.md  performance.md  precision_audit.md  repository_layout.md  resource_bench.md  roadmap.md  roadmap_v6_v7.md  rust_glossary_review_v4.28.md  scaling_report.md  source_classification.md  source_scoring.md  tokenizer_dry_run.md  tokenizer_experiment_plan.md  tokenizer_policy.md  tokenizer_segmentation_eval.md  training_baseline.md  training_notes_rc4.md  weekly_plan_2026-W19.md
scripts/: README.md  approve_rust_entry.sh  bump_foundation_version.sh  check_metrics_currency.sh  compare_rc4_sweep.sh  cut_release.sh  download_whisper_model.sh  fetch_abai_wikisource.sh  fetch_cc100_kk.sh  fetch_common_voice_kk.sh  fetch_huggingface_kazakh.sh  fetch_kazakh_classics.sh  fetch_kk_wikibooks.sh  fetch_tatoeba_kazakh.sh  fetch_textbooks_kz.sh  fetch_wikipedia_kz.sh  generate_source_acceptance_report.sh  huggingface_kazakh_manifest.json  refresh_readme_badges.sh  run_clean_training_corpus_assembly.sh  run_clean_training_corpus_report.sh  run_data_loader_smoke_test.sh  run_encode_corpus.sh  run_eval_benchmark_delta.sh  run_eval_benchmark_report.sh  run_eval_perplexity.sh  run_foundation_overview.sh  run_foundation_overview_delta.sh  run_generate.sh  run_generation_showcase.sh  run_mini_clean_training.sh  run_slow_roundtrip.sh  (+37 more)
(+305 files in other folders)
