[workspace]
members = [
  "crates/adam-kernel",
  "crates/adam-kernel-fst",
  "crates/adam-dialog",
  "crates/adam-tokenizer",
  "crates/adam-corpus",
  "crates/adam-eval",
  "crates/adam-reasoning",
  "crates/adam-retrieval",
  "crates/adam-scaling",
  "crates/adam-train",
]
resolver = "2"

[workspace.package]
version = "4.6.5"
edition = "2024"
license = "BUSL-1.1"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
toml = "0.8"
rayon = "1.10"
ctrlc = "3.4"
