[workspace]
members = [
  "crates/adam-kernel",
  "crates/adam-kernel-fst",
  "crates/adam-dialog",
  "crates/adam-tokenizer",
  "crates/adam-corpus",
  "crates/adam-eval",
  "crates/adam-reasoning",
  "crates/adam-retrieval",
  "crates/adam-scaling",
  "crates/adam-train",
  "crates/adam-voice",
]
resolver = "2"

[workspace.package]
version = "5.30.5"
edition = "2024"
license = "BUSL-1.1"

# **v4.54.6** — clippy hygiene policy. Codex flagged 293 warnings in
# 2026-05-05 review; ~150 are stylistic / refactor-risk and not
# load-bearing for the v4.x direction (deterministic kernel,
# transcript-driven testing, watch-battery deployment). The classes
# allowed below are explicitly accepted; everything else is denied
# via `-D warnings` so future clippy runs surface real issues only.
#
# Each crate opts in via `lints.workspace = true` in its [lints]
# section; without that, clippy doesn't apply the workspace policy.
[workspace.lints.clippy]
# Stylistic preference: nested `if let Some(...) { if cond { ... } }`
# is clearer for the FST + planner layers than the collapsed `&&`
# form. 99 occurrences across kernel-fst / dialog / corpus.
collapsible_if = "allow"
# Doc-comment list-item lazy continuation: rustfmt + rustdoc render
# the existing `///` lists correctly; clippy's stricter indentation
# preference is style-only.
doc_lazy_continuation = "allow"
doc_overindented_list_items = "allow"
# Type complexity: the FST + planner expose typed signatures
# (e.g., `Vec<(String, Analysis, f32)>`) where a type alias would
# hide the structure. 7 occurrences; case-by-case judgement.
type_complexity = "allow"
# Too-many-arguments: Conversation::turn_with_trace and a few other
# entry points have stable public arity (lexicon, repo, seed,
# session, epistemic, extra_slots). Refactoring to a typed config
# struct would churn every test fixture. 3 occurrences.
too_many_arguments = "allow"
# Items-after-test-module: minor ordering preference; not a bug.
items_after_test_module = "allow"
# `if` blocks that look identical but encode separate semantic
# branches (e.g., epistemic-routing fallthrough). Merging them
# would lose readability; the duplication is intentional.
if_same_then_else = "allow"
# Empty-line-after-doc-comment: rustfmt allows them; clippy's
# stricter rule conflicts with our doc-style.
empty_line_after_doc_comments = "allow"
# field-reassign-with-default: tests + builders prefer sequential
# field assignment for readability over `Foo { x, ..Default::default() }`.
# 7 occurrences across test fixtures.
field_reassign_with_default = "allow"
# unnecessary `get(k).is_none()` vs `!contains_key(k)`: stylistic
# preference; both compile to the same code.
unnecessary_get_then_check = "allow"
# Redundant guards in match arms: keeping explicit guards for
# self-documenting branches; trace clarity > terseness.
redundant_guards = "allow"
# **v5.16.5** — `manual_checked_ops` flagged by newer clippy in
# adam-tokenizer; the existing arithmetic guards (`if denom != 0
# { x / denom }`) are explicit and self-documenting. The clippy
# suggestion (`x.checked_div(denom)`) returns Option<T> and would
# force a let-Some / unwrap_or pattern that hides the zero-guard
# intent. Stylistic preference, not a correctness issue.
manual_checked_ops = "allow"
# **v5.16.6** — `collapsible_match` flagged in dialog quality /
# sentence_decomp where `match Role::X => { if guard { ... } }`
# reads more clearly than match-arm guards (`Role::X if guard =>`).
# Same family as `collapsible_if` (already allowed): nested form is
# clearer for the planner / role-assignment layers. 8 occurrences.
collapsible_match = "allow"
# **v5.16.6** — `unnecessary_sort_by` suggestion to swap
# `sort_by(|a, b| b.1.cmp(&a.1))` (descending) for
# `sort_by_key(|b| std::cmp::Reverse(b.1))`. The closure form makes
# the descending intent obvious without importing `Reverse`;
# stylistic preference, not a correctness issue. 1 occurrence.
unnecessary_sort_by = "allow"
# **v5.20.0** — `needless_range_loop` flagged on Wagner-Fischer
# DP in `kazakh_fuzzy::kazakh_edit_distance`. The index-based
# `for i in 0..=n { ... dp[i][j] = ... dp[i-1][j-1] ... }` form
# is the canonical edit-distance recurrence; rewriting with
# `enumerate()` for a 2D matrix with i±1/j±1 references would be
# noisier, not clearer. 2 occurrences (outer + inner). Allowing.
needless_range_loop = "allow"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
toml = "0.8"
rayon = "1.10"
ctrlc = "3.4"
