[package]
name = "adam-agg-tokenizer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Agglutinative morpheme-level tokenizer for Kazakh — typed-morpheme vocab + FST round-trip. The L1/L2 substrate for the v6.0 algebra-anchored neural composition layer; see docs/architecture_neural_v6.md."

[dependencies]
adam-kernel = { path = "../adam-kernel" }
adam-kernel-fst = { path = "../adam-kernel-fst" }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
proptest = "1"

[lints]
workspace = true
