[package]
name = "adam-corpus"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
adam-kernel = { path = "../adam-kernel" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[[bin]]
name = "synth_sentences"
path = "src/bin/synth_sentences.rs"
