[package]
name = "adam-corpus"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Kazakh corpus pipeline for adam — source-pack ingestion (Tatoeba / Wikipedia KZ / Common Voice / CC-100 / Abai / proverbs / classics / textbooks), suffix-chain priors, root-affinity training, parse-disambiguation eval."

[dependencies]
adam-kernel = { path = "../adam-kernel" }
adam-kernel-fst = { path = "../adam-kernel-fst" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[[bin]]
name = "synth_sentences"
path = "src/bin/synth_sentences.rs"

[[bin]]
name = "corpus_delta"
path = "src/bin/delta.rs"

[[bin]]
name = "corpus_report"
path = "src/bin/report.rs"

[[bin]]
name = "generate_acceptance_report"
path = "src/bin/generate_acceptance_report.rs"

[[bin]]
name = "process_tatoeba_kazakh"
path = "src/bin/process_tatoeba_kazakh.rs"

[[bin]]
name = "process_wikipedia_kz"
path = "src/bin/process_wikipedia_kz.rs"

[[bin]]
name = "process_common_voice_kk"
path = "src/bin/process_common_voice_kk.rs"

[[bin]]
name = "train_suffix_priors"
path = "src/bin/train_suffix_priors.rs"

[[bin]]
name = "eval_parse_disambiguation"
path = "src/bin/eval_parse_disambiguation.rs"

[[bin]]
name = "train_root_affinity"
path = "src/bin/train_root_affinity.rs"
