[package]
name = "adam-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Eval + benchmark harness for adam — coverage / contract benchmarks, tokenizer-experiment manifests, holdout datasets, Rust-only and graph-first stack-contract tests."

[dependencies]
adam-corpus = { path = "../adam-corpus" }
adam-tokenizer = { path = "../adam-tokenizer" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[[bin]]
name = "eval_delta"
path = "src/bin/delta.rs"

[[bin]]
name = "eval_report"
path = "src/bin/report.rs"

[lints]
workspace = true
