[package]
name = "adam-kernel-fst"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Deterministic finite-state transducer for Kazakh morphology — 11 archiphonemes, 22+ phonology rules, 36 suffix templates, inverse parser, curated Lexicon"

[dependencies]
adam-kernel = { path = "../adam-kernel" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
