[package]
name = "adam-reasoning"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Intelligent Lexical-Morphemic Retrieval & Reasoning — fact extraction, lexical graph, and symbolic inference over the adam corpus"

[dependencies]
adam-kernel-fst = { path = "../adam-kernel-fst" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
rayon.workspace = true
ctrlc.workspace = true

[dev-dependencies]
tempfile = "3.12"

[[bin]]
name = "extract_facts"
path = "src/bin/extract_facts.rs"

[[bin]]
name = "build_lexical_graph"
path = "src/bin/build_lexical_graph.rs"

[[bin]]
name = "run_reasoner"
path = "src/bin/run_reasoner.rs"

[[bin]]
name = "validate_world_core"
path = "src/bin/validate_world_core.rs"

[lints]
workspace = true
