[package]
name = "adam-retrieval"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
adam-kernel-fst = { path = "../adam-kernel-fst" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[[bin]]
name = "build_morpheme_index"
path = "src/bin/build_morpheme_index.rs"
