[package]
name = "adam-tokenizer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Kazakh-aware tokenizer + segmentation for adam. Produces deterministic token streams + segmentation roots/rules used downstream by adam-kernel-fst and adam-corpus."

[dependencies]
adam-kernel = { path = "../adam-kernel" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[[bin]]
name = "tokenizer_delta"
path = "src/bin/delta.rs"
