[package]
name = "adam-train"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "adam — legacy / research crate from the v0.1–v0.4 transformer era. Preserves the stochastic-LM corpus / tokenizer / benchmark assembly tooling so the data-side foundation gate keeps running. Not part of the v4.x deterministic dialog stack — see crate root docstring for the boundary policy."

[dependencies]
adam-corpus = { path = "../adam-corpus" }
adam-eval = { path = "../adam-eval" }
adam-tokenizer = { path = "../adam-tokenizer" }
candle-core = "0.8"
candle-nn = "0.8"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.8", features = ["metal"] }
candle-nn = { version = "0.8", features = ["metal"] }

[[bin]]
name = "train_delta"
path = "src/bin/delta.rs"
