[package]
name = "adam-voice"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Voice I/O transducer for the Qazaq IR research kernel — peripheral mic capture (cpal) + STT shell-out (whisper.cpp). Probabilistic on the input side, but only the normalised text + confidence metadata reaches the deterministic dialog kernel. v5.14.0 (V0): push-to-talk capture + WhisperCli shell-out. VAD / barge-in / confidence gate land in v5.15.0+ on the same architectural boundary."

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
cpal = "0.15"
hound = "3.5"
# **v5.25.0** — Voice arc V4 part 2. Pure-Rust WebRTC AEC3 port for
# acoustic echo cancellation; needed so the mic doesn't pick up TTS
# audio during VAD-during-TTS barge-in. Chose `aec3` (RubyBit) over
# `sonora` because sonora requires rustc 1.91 and we're on 1.89; aec3
# has no MSRV constraint and exposes a clean `pipelines::linear`
# builder API for 10 ms-frame f32 processing. No C-bindings.
aec3 = "0.2"

[dev-dependencies]

[lints]
workspace = true
